--- a/index.ipynb
+++ b/index.ipynb
@@ -216,22 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hi Fred, I'm so glad we'll be going on the trip together!\""
+       "\"Hi Sam, I'm so glad we'll be going on the trip together!\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "meet('fred')"
+    "meet('Sam')"
    ]
   },
   {
